--- a/2017已读书单.md
+++ b/2017已读书单.md
@@ -3,3 +3,18 @@
 ## 科技
   
   -- 《创新者：一群技术狂人和鬼才程序员如何改变世界》
+
+
+已购书籍
+分布式服务框架原理与实践
+软技能 代码之外的生存指南
+
+金字塔原理大全集 芭芭拉 明托
+人人学音标
+心胜  金一南
+
+创新者的窘境  克里斯坦森
+浪潮之巅  吴军
+数学之美  吴军
+
+K.K三部曲（必然 失控 科技想要什么）（套装）  凯文凯利
