--- a/芯片.md
+++ b/芯片.md
@@ -4,3 +4,28 @@ https://www.sohu.com/a/229232102_202311
 
 
 # 深度学习  https://www.sohu.com/a/198602802_804770
+
+
+
+
+# 词语解析
+## 制造相关
+开发新产品验证阶段：
+  EVT（Engineering Validation Test）：
+  是针对工程原型机的验证，对象很可能是一大块开发板，或是很多块开发板；关键是要有足够时间和样品。
+  通常，如果是新平台，需要花的时间和精力可能更多，会有很多问题要解决，甚至有很多方案要对比；而修改既有产品的话，这个阶段会简单很多，甚至省略。
+  这一阶段的重点是尽可能多的发现设计问题，以便及早修正；或者说设计可行性的验证。同时检查是否有规格被遗漏。
+  主要由研发部门来执行。
+
+DVT（Design Verification Test）：
+  这一阶段应该至少是可以看到产品雏形了，电路板已经达到目标尺寸，或者至少是可以放进一个完整的壳体。
+  这一阶段主要验证整机功能的完整性和设计的正确性，并可作出结论，这个产品可以拿去生产了。因为生产意味着更大的投入，所以，这将是最后的查错机会，你需要把设计和制造的问题全部考虑过。
+  这一阶段的另一个目标是产品拿到该拿的测试报告。
+  这一阶段，由研发部门和品保部门共同来完成，检验研发交出的成果。
+
+PVT（Production Verification Test）：
+  这一阶段，处理对象应该是设计完成的产品，也就是设计的验证工作可以告一段落。
+  这一阶段将严格按照该产品生产时的标准过程来进行，包括仪器、测试工具、生产工具等都需要到位。测试得出的结论，是大规模生产的重要基础，包括工序是否太复杂，工具是否足够等Design for Manufacturering Fact的考量。
+
+MVT（Mass Verificaiton Test）：
+MVT（Mass Verificaiton Test），或者是和PVT合为一起的，主要是考虑产品批量后的性能是否一致；然后是MP（Mass Production）。
