--- a/芯片.md
+++ b/芯片.md
@@ -1,5 +1,5 @@
 # 一文读懂中国芯片产业  
-[文章地址]（https://www.sohu.com/a/229232102_202311）
+[文章地址](https://www.sohu.com/a/229232102_202311)
 
 
 # 深度学习  
@@ -12,7 +12,7 @@
 ## 制造相关
 开发新产品验证阶段：
 
-- EVT（Engineering Validation Test）：
+- ** EVT（Engineering Validation Test）： **
   是针对工程原型机的验证，对象很可能是一大块开发板，或是很多块开发板；关键是要有足够时间和样品。
   通常，如果是新平台，需要花的时间和精力可能更多，会有很多问题要解决，甚至有很多方案要对比；而修改既有产品的话，这个阶段会简单很多，甚至省略。
   这一阶段的重点是尽可能多的发现设计问题，以便及早修正；或者说设计可行性的验证。同时检查是否有规格被遗漏。
